[package]
name = "ambition"
version = "0.1.0"
edition = "2021"

# Squeeze out more performance for `release` builds - very slow compile times
[profile.release]
lto = "thin"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = [ "wayland", "dynamic_linking" ] }
bevy_egui = "0.23.0"
lazy_static = "1.4.0"
