[package]
name = "ambition"
version = "0.3.0"
edition = "2021"

# Squeeze out more performance for `release` builds - very slow compile times
[profile.release]
lto = "thin"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.0" }
bevy_egui = "0.25.0"
lazy_static = "1.4.0"
