[package]
name = "ambition"
version = "0.4.0"
edition = "2021"
authors = ["Muhammad Nauman Raza <devraza.hazard643@slmail.me>"]
description = "A fast-paced 2D MMORPG."
readme = "README.md"

# Squeeze out more performance for `release` builds - very slow compile times
[profile.release]
lto = "thin"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2", features = ["wayland"] }
bevy_egui = "0.27.1"
bevy_hanabi = "0.11.0"
lazy_static = "1.4.0"
